# vida

./: .gitignore  README.md  admob.md
backend/: .env.example  Dockerfile  _align_doc.py  _fix_rev.py  _fix_uuid.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_episode_source.py  0003_episode_views.py  0004_ad_callback_token.py  0005_add_series_category.py  0006_add_watch_history.py  0007_add_watchlist.py  0008_add_episode_likes.py  0009_episode_video_provider.py
backend/scripts/: cleanup_seed.py  seed.py  seed_tmdb.py  seed_tvmaze.py
backend/src/app/: main.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: router.py
backend/src/app/api/v1/endpoints/: admin.py  auth.py  content.py  creators.py  discovery.py  payments.py  users.py  wallet.py
backend/src/app/core/: config.py  enums.py
backend/src/app/db/: session.py
backend/src/app/db/models/: __init__.py
backend/src/app/repositories/: base.py  coin_repository.py  user_repository.py
backend/src/app/schemas/: __init__.py
backend/src/app/security/: __init__.py  ad_callback.py
backend/src/app/services/: auth_service.py  cloudflare_stream.py  coin_service.py  payment_service.py  payout_service.py  r2_service.py
backend/src/vida_backend/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_episode_source.py  test_health.py  test_phase1_endpoints.py  test_phase2_publish.py  test_wallet.py  test_watch_heartbeat.py
docs/: assets-preview.html  themes-preview.html  vida-design.html  (+1 more)
(+120 files in other folders)
