[project]
name = "vida-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vida Dev", email = "dev@vida.app" }
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "bcrypt>=4.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-jose[crypto]>=3.5.0",
    "ruff>=0.15.22",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "resend>=2.34.0",
    "stripe>=15.3.1",
    "paystackapi>=2.1.3",
    "redis>=8.0.1",
    "boto3>=1.43.51",
    "python-multipart>=0.0.32",
    "starlette<1.3",
]

[build-system]
requires = ["hatchling"]
build-back-end = "hatchling.build"

[tool.uv.extra-build-dependencies]
vida-backend = ["setuptools"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
